overlay/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-qr-service
  annotations:
    kubernetes.io/ingress.class: "traefik"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dev.qrservice.api.sekthor.ch
    secretName: dev-qrservice-tls-cert
  rules:
    - host: dev.qrservice.api.sekthor.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qr-code-service
                port:
                  number: 80
